--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
+    <div class="circle" id="c1"></div>
+    <div class="circle" id="c2"></div>
+    <div class="circle" id="c3"></div>
+    <div class="circle" id="c4"></div>
+    <div class="circle" id="c5"></div>
 
 </body>
 </html>
