created burger lines

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <div class="circle" id="c4"></div>
     <div class="circle" id="c5"></div>
 
+    <div class="burgerButton">
+        <span class="burgerLine"></span>
+        <span class="burgerLine"></span>
+        <span class="burgerLine"></span>
+    </div>
           
 
 </body>
