--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
     
     <title>CSS-animations | WebTec</title>
@@ -18,7 +19,7 @@
     <div class="circle" id="c4"></div>
     <div class="circle" id="c5"></div>
 
-    <div class="burgerButton">
+    <div id="burgerButton">
         <span class="burgerLine"></span>
         <span class="burgerLine"></span>
         <span class="burgerLine"></span>
